sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var x:Boolean=true
	do{
		for(i<-0 to getNombreValeurs()-2){
			x=false
			if(plusPetit(i,i+1){
				echange(i,i+1)
				x=true
			}
		}
		for(i<-getNombreValeurs()-2 to 0){
			x=false
			if(plusPetit(i,i+1){
				echange(i,i+1)
				x=true
			}
		}
	}
}
